--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div id="header">
-  <img src="img/logo.png"/>
+  <img src="/img/logo.png"/>
   <h1><a href="/">Helium Tank</a></h1>
   <ul id="navbar">
     <li><a href="/blog">Floating Thoughts</a></li>
     <li><a href="/projects">Projects</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li><a href="/blog/archives">Archives</a></li>
   </ul>
 </div>
