--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="/css/style.css" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Oxygen|Nunito' rel='stylesheet' type='text/css'/>
     <title>{{ page.title }}</title>
   </head>
