--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
     <li><a href="/blog">Floating Thoughts</a></li>
     <li><a href="/projects">Projects</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/blog/archives">Archives</a></li>
+<!-- Will add later    <li><a href="/blog/archives">Archives</a></li> -->
   </ul>
 </div>
