UTF-8 and minor margin issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Oxygen|Nunito' rel='stylesheet' type='text/css'/>
     <title>{{ page.title }}</title>
