--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <img src="/img/logo.png"/>
-  <h1><a href="/">Helium Tank</a></h1>
+  <h1><a href="/">Chelium</a></h1>
   <ul id="navbar">
     <li><a href="/blog">Floating Thoughts</a></li>
     <li><a href="/projects">Projects</a></li>
