--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
   <h1><a href="/">Chelium</a></h1>
   <ul id="navbar">
     <li><a href="/projects">Projects</a></li>
+    <li><a href="/resume">Resume</a></li>
     <li><a href="/about">About</a></li>
 <!-- Will add later    <li><a href="/blog/archives">Archives</a></li> -->
   </ul>
