--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<div id="header">
-  <img src="/img/logo.png"/>
+<div id="header" role="navigation" aria-label="Main">
+  <img src="/img/logo.png" alt="chelium logo" />
   <h1><a href="/">Chelium</a></h1>
   <ul id="navbar">
     <li><a href="/projects">Projects</a></li>
